# file-hasher

./: COMPREHENSIVE_VALIDATION_REPORT.md  Cargo.toml  LICENSE-MIT  README.md  TEST_RESULTS.md
.claude/: config.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: hash.rs  lib.rs  main.rs
tests/: cli_test.rs  file_test.rs  hash_test.rs  integration.rs  verify_test.rs
tests/fixtures/: medium.txt  small.txt
